--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                  <h3>College</h3>
+                  <h3>Tertiary</h3>
                   <h4 class="organization">Mindanao State University - General Santos</h4>
                 </div>
                 <div class="col-md-6">
@@ -60,7 +60,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-md-6">
-                    <h3>High School</h3>
+                    <h3>Secondary</h3>
                     <h4 class="organization">Fatima National High School</h4>
                   </div>
                   <div class="col-md-6">
