--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <time class="period">2021 - </time>
                 </div>
               </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+              <p class="text-muted">Taken Bachelor of Science in Information Technology.</p>
             </div>
             <div class="item">
               <div class="row">
