--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <time class="period">2021 - </time>
                 </div>
               </div>
-              <p class="text-muted">Taken Bachelor of Science in Information Technology.</p>
+              <p class="text-muted">During my tertiary education, I pursued a Bachelor of Science in Information Technology (BSIT) with a major in Networks. My studies focused on network design, management, and security, equipping me with the technical skills needed to excel in the field of IT infrastructure.</p>
             </div>
             <div class="item">
               <div class="row">
@@ -67,7 +67,7 @@
                     <time class="period">2015 - 2021</time>
                   </div>
                 </div>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                <p class="text-muted">In Senior High School, I specialized in Computer System Servicing, where I gained hands-on experience in troubleshooting, maintaining, and repairing computer systems. This foundation provided me with practical skills in hardware and software management.</p>
               </div>
               <div class="item">
                 <div class="row">
@@ -78,9 +78,6 @@
                 <div class="col-md-6">
                   <time class="period">2009 - 2015</time>
                 </div>
-              </div>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
-            </div>
           </div>
           <div class="group" id="skills">
             <div class="row">
