--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/avatar.jpg">
           </div>
-          <p>Hello! I am <strong>Gabriel John R. Goc-ong</strong>.</p>
+          <p>Hello! I am <strong>Gabriel John R. Goc-ong. I mainly use python as my main language in computing.</strong>.</p>
         </div>
       </section>
       <section class="cv-block info">
