--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/avatar.jpg">
           </div>
-          <p>Hello! I am <strong>Gabriel John R. Goc-ong. I mainly use python as my main language in computing.</strong>.</p>
+          <p>Hello! I am <strong>Gabriel John R. Goc-ong.</strong> I mainly use python as my main language in computing.</p>
+          <a href="mailto:reilthebest001@gmail.com" class="btn btn-outline-primary">Contact Me</a>
         </div>
       </section>
       <section class="cv-block info">
