--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <h2>Contact Info</h2>
                   <div class="row">
                     <div class="col-1">
-                      <i class="ion-android-calendar icon"></i>
+                     <a href="/secret/game menu.html" <i class="ion-android-calendar icon"></i>
                     </div>
                     <div class="col-9">
                       <span>08/06/2002</span>
