--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="avatar">
             <img class="img-fluid rounded-circle" src="assets/img/avatar.jpg">
           </div>
-          <p>Hello! I am <strong>Gabriel John R. Goc-ong.</strong> I mainly use python as my main language in computing.</p>
+          <p>Hello! I am <strong>Gabriel John R. Goc-ong.</strong>Currently pursuing a Bachelor of Science in Information Technology, majoring in Networking, at Mindanao State University - General Santos.</p>
           <a href="mailto:reilthebest001@gmail.com" class="btn btn-outline-primary">Contact Me</a>
         </div>
       </section>
