--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                   <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item item">
+                    <a class="nav-link" href="#hobbies">Achievements</a>
+                </li>
+                <li class="nav-item item">
                     <a class="nav-link" href="#hobbies">Hobbies</a>
                 </li>
               </li>
@@ -144,6 +147,9 @@
               </div>
             </div>
           </div>
+          <div class="hobbies group" id="hobbies">
+            <h2 class="text-center">Achievements</h2>
+            
           <div class="hobbies group" id="hobbies">
             <h2 class="text-center">Hobbies</h2>
             <p class="text-center text-muted">Sleep<br>Playing Online Games<br>Making Games</p>
