--- a/datatables.html
+++ b/datatables.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced DataTables Example</title>
+    <title>DataTables</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Advanced DataTables Example</h1>
+        <h1 class="text-center">DataTables</h1>
 
         <!-- Tabs to display the table twice -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
